--- a/stack-base-b.yml
+++ b/stack-base-b.yml
@@ -8,13 +8,13 @@ services:
   servicea:
     deploy:
       replicas: 1
-      resources:
-        limits:
-          cpus: '1.50'
-          memory: 1024M
-        reservations:
-          cpus: '0.05'
-          memory: 128M
+      # resources:
+      #   limits:
+      #     cpus: '1.50'
+      #     memory: 1024M
+        # reservations:
+        #   cpus: '0.05'
+        #   memory: 128M
     image: marcelowis/serviceb:latest
     ports:
       - 8045:8045
