--- a/kong/stack-base.yml
+++ b/kong/stack-base.yml
@@ -47,7 +47,7 @@ services:
   kong:
     # image: "kong:2.3.2-alpine"
     # user: "kong"
-    image: marcelowis/kong:latest
+    image: anfritiaoprime/kong:latest
     depends_on:
       - db
     environment:
